# network-topology

./: Cargo.toml  Makefile  docker-compose.dev.yml
migrations/: 20251029193448_user-auth.sql  20251030044828_daemon_api.sql  20251030170438_host-hide.sql  20251106235621_normalize-daemon-cols.sql  20251107222650_oidc-auth.sql
src/daemon/: mod.rs
src/daemon/discovery/: handlers.rs  manager.rs  mod.rs
src/daemon/discovery/service/: base.rs  docker.rs  network.rs  self_report.rs
src/daemon/runtime/: service.rs  types.rs
src/daemon/shared/: handlers.rs  storage.rs
src/daemon/utils/: base.rs  linux.rs  macos.rs  scanner.rs  windows.rs
src/server/: config.rs
src/server/auth/: handlers.rs  mod.rs  oidc.rs  service.rs
src/server/auth/impl/: api.rs
src/server/daemons/impl/: handlers.rs  storage.rs
src/server/discovery/: handlers.rs  service.rs
src/server/discovery/impl/: base.rs  handlers.rs  storage.rs  types.rs
src/server/groups/: handlers.rs  service.rs
src/server/groups/impl/: base.rs  handlers.rs  mod.rs  storage.rs  types.rs
src/server/hosts/: service.rs
src/server/hosts/impl/: api.rs  base.rs  handlers.rs  interfaces.rs  mod.rs  ports.rs  storage.rs  virtualization.rs
src/server/networks/: handlers.rs  impl.rs  service.rs
src/server/services/: handlers.rs  mod.rs  service.rs
src/server/services/definitions/: access_point.rs  adguard_home.rs  amazon_echo.rs  apc.rs  audiobookshelf.rs  authentik.rs  autobrr.rs  bazarr.rs  bind9.rs  camera.rs  chromecast.rs  cleanuparr.rs  client.rs  cloudflared.rs  coolercontrol.rs  cups.rs  dhcp_server.rs  dns_server.rs  docker_container.rs  docker_daemon.rs  docker_swarm.rs  duplicati.rs  eero_gateway.rs  eero_repeater.rs  emby.rs  file_server.rs  fios_extender.rs  fios_gateway.rs  firewall.rs  fortigate.rs  gateway.rs  glances.rs  google_home.rs  google_nest_repeater.rs  google_nest_router.rs  grafana.rs  graylog.rs  grocy.rs  homarr.rs  home_assistant.rs  (+61 more)
src/server/services/impl/: categories.rs  definitions.rs  endpoints.rs  handlers.rs  mod.rs  patterns.rs  storage.rs  virtualization.rs
src/server/shared/: mod.rs
src/server/shared/handlers/: factory.rs  traits.rs
src/server/shared/services/: traits.rs
src/server/shared/storage/: filter.rs  generic.rs  mod.rs  seed_data.rs  traits.rs
src/server/shared/types/: entities.rs  metadata.rs  mod.rs
src/server/subnets/: handlers.rs  service.rs
src/server/subnets/impl/: base.rs  handlers.rs  storage.rs  types.rs
src/server/topology/service/: context.rs  edge_builder.rs  main.rs
src/server/topology/service/optimizer/: child_positioner.rs  main.rs  subnet_positioner.rs  utils.rs
src/server/topology/service/planner/: anchor_planner.rs  child_planner.rs  subnet_layout_planner.rs  utils.rs
src/server/topology/types/: api.rs  base.rs  edges.rs  nodes.rs
src/server/users/: handlers.rs  service.rs
src/server/users/impl/: base.rs  handlers.rs
