[package]
name = "network-visor"
version = "0.1.0"
edition = "2024"

[lib]
name = "netvisor"
path = "src/lib.rs"

# Release profile optimizations for smaller, faster binaries
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization, slower compile
panic = "abort"     # Smaller binaries, no unwinding
strip = true        # Remove debug symbols

# Development profile for faster builds
[profile.dev]
opt-level = 0       # No optimization for faster builds
debug = true        # Keep debug symbols for debugging
lto = false         # No LTO for faster builds
incremental = true  # Enable incremental compilation

# Dependencies grouped by purpose for better maintainability
[dependencies]
# === Web Server Framework ===
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "fs", "signal", "process"] }

# === Database ===
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === Configuration and Logging ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
figment = { version = "0.10", features = ["json", "env"] }

# === Async utilities ===
tokio-util = "0.7.16"
anyhow = "1.0.100"

# === CLI ===
clap = { version = "4.0", features = ["derive"] }

# === File and MIME handling ===
mime_guess = "2.0"
async-fs = "2.1.3"

# === Core Utilities ===
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# === System Information ===
hostname = "0.4.1"
local-ip-address = "0.6.5"
mac_address = { version = "1.1.8", features = ["serde"] }
mac_oui = { version = "0.4.11", features = ["with-db"] }
directories-next = "2.0.0"
reqwest = "0.12.24"

# === Networking ===
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls", "cookies"] }
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime", "dns-over-rustls"] }
snmp2 = { version = "0.4.8", features = ["tokio"] }
pnet = "0.35.0"
cidr = { version = "0.3.1", features = ["serde"] }
if-addrs = "0.14.0"
dns-lookup = "3.0.0"

# === Dynamic Types Support ===
dyn-clone = "1.0.20"
dyn-hash = "0.2.2"
dyn-eq = "0.1.3"
ipgen = "1.0.2"
validator = { version = "0.20", features = ["derive"] }
regex = "1.11.3"
tempfile = "3.23.0"
net-route = "0.4.6"
bollard = "0.19.1"
httparse = "1.10.1"
async-stream = "0.3.6"
serial_test = "3.2.0"
postgres = "0.19.12"
tower-sessions = "0.14.0"
tower-sessions-core = "0.14.0"
tower-sessions-memory-store = "0.14.0"
argon2 = "0.5.3"
password-hash = "0.5.0"
lazy_static = "1.5.0"
rand_core = "0.9.3"
axum-extra = {version = "0.10.3", features = ["cookie"]}
time = "0.3.44"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
secrecy = "0.10.3"
sha2 = "0.10.9"
hex = "0.4.3"
tokio-cron-scheduler = "0.15.1"
axum-macros = "0.5.0"
openidconnect = { version = "4.0.1", features = ["reqwest"] }
oauth2 = "5.0.0"
email_address = "0.2.9"
urlencoding = "2.1.3"
rlimit = "0.10.2"
libc = "0.2.177"

# === Async utilities ===
async-trait = "0.1"
futures = "0.3"
tokio-util = "0.7.16"